--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html  >
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8155920079931735",
+          enable_page_level_ads: true
+     });
+</script>
   <!-- Site made with Mobirise Website Builder v4.9.7, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-rotGPxy0eI mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="cid-rotGPxy0eI mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
